--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>House Plant Tracker</title>
+    <meta
+      name="description"
+      content="A House Plant Tracker App made with Vite + Vue and server side rendering"
+    />
+    <title>House Plant Tracker - SSR</title>
     <!--preload-links-->
   </head>
   <body>
